plotting excursions and added PGS

--- a/Python - notebooks/Mage - new.ipynb
+++ b/Python - notebooks/Mage - new.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "from datetime import datetime\n",
+    "from statistics import mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mageCalculation(df, std=1):\n",
-    "    \n",
-    "    df = fullDay(df)\n",
-    "    length = df['Display Time'].iloc[-1]-df['Display Time'].iloc[0]\n",
-    "    length = length.round(\"d\")\n",
-    "    days = length.days\n",
     "    \n",
     "    #extracting glucose values and incdices\n",
     "    glucs = df['GlucoseValue'].to_list()\n",
@@ -134,25 +131,123 @@
     "\n",
     "    turning_points = turning_points.drop_duplicates(subset= \"Index\", keep= \"first\")\n",
     "    turning_points=turning_points.reset_index(drop=True)\n",
-    "\n",
-    "    # display(turning_points)\n",
+    "    excursion_points = excursion_points[excursion_points.Index.isin(turning_points.Index) == False]\n",
+    "    excursion_points = excursion_points.reset_index(drop=True)\n",
+    "        # display(turning_points)\n",
     "\n",
     "    # calculating the MAGE score\n",
     "    mage = turning_points.GlucoseValue.sum()/excursion_count\n",
-    "    #calculating mage per day\n",
-    "    mage_per_day = mage/days\n",
-    "    return round(mage,3), round(mage_per_day,3)"
+    "    \n",
+    "\n",
+    "    return round(mage,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saveExcusrions(subjectId, df, std=1):    \n",
+    "    #extracting glucose values and incdices\n",
+    "    glucs = df['GlucoseValue'].to_list()\n",
+    "    indices = [1*i for i in range(len(glucs))]\n",
+    "    stdev = std\n",
+    "    \n",
+    "    # detection of local minima and maxima\n",
+    "    x = indices\n",
+    "    gvs = glucs\n",
+    "    # local min & max\n",
+    "    a = np.diff(np.sign(np.diff(gvs))).nonzero()[0] + 1      \n",
+    "    # local min\n",
+    "    valleys = (np.diff(np.sign(np.diff(gvs))) > 0).nonzero()[0] + 1 \n",
+    "    # local max\n",
+    "    peaks = (np.diff(np.sign(np.diff(gvs))) < 0).nonzero()[0] + 1         \n",
+    "    # +1 due to the fact that diff reduces the original index number\n",
+    "\n",
+    "    #storing the local minima and maxima to identify and remove turning points\n",
+    "    excursion_points = pd.DataFrame(columns=['Index', 'Timestamp', 'GlucoseValue', 'Type'])\n",
+    "    k=0\n",
+    "    for i in range(len(peaks)):\n",
+    "        excursion_points.loc[k] = [peaks[i]] + [df['Display Time'][k]] + [df['GlucoseValue'][k]] + [\"P\"]\n",
+    "        k+=1\n",
+    "\n",
+    "    for i in range(len(valleys)):\n",
+    "        excursion_points.loc[k] = [valleys[i]] + [df['Display Time'][k]] + [df['GlucoseValue'][k]] + [\"V\"]\n",
+    "        k+=1\n",
+    "\n",
+    "    excursion_points = excursion_points.sort_values(by=['Index'])\n",
+    "    excursion_points = excursion_points.reset_index(drop=True)\n",
+    "    # display(excursion_points)\n",
+    "\n",
+    "\n",
+    "    # selecting turning points\n",
+    "    turning_points = pd.DataFrame(columns=['Index', 'Timestamp', 'GlucoseValue', 'Type'])\n",
+    "    k=0\n",
+    "    for i in range(stdev,len(excursion_points.Index)-stdev):\n",
+    "        positions = [i-stdev,i,i+stdev]\n",
+    "        for j in range(0,len(positions)-1):\n",
+    "            if(excursion_points.Type[positions[j]] == excursion_points.Type[positions[j+1]]):\n",
+    "                if(excursion_points.Type[positions[j]]=='P'):\n",
+    "                    if excursion_points.GlucoseValue[positions[j]]>=excursion_points.GlucoseValue[positions[j+1]]:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "                    else:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "                else:\n",
+    "                    if excursion_points.GlucoseValue[positions[j]]<=excursion_points.GlucoseValue[positions[j+1]]:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j]]\n",
+    "                        k+=1\n",
+    "                    else:\n",
+    "                        turning_points.loc[k] = excursion_points.loc[positions[j+1]]\n",
+    "                        k+=1\n",
+    "\n",
+    "    if len(turning_points.index)<10:\n",
+    "        turning_points = excursion_points.copy()\n",
+    "        excursion_count = len(excursion_points.index)\n",
+    "    else:\n",
+    "        excursion_count = len(excursion_points.index)/2\n",
+    "\n",
+    "\n",
+    "\n",
+    "    turning_points = turning_points.drop_duplicates(subset= \"Index\", keep= \"first\")\n",
+    "    turning_points=turning_points.reset_index(drop=True)\n",
+    "    excursion_points = excursion_points[excursion_points.Index.isin(turning_points.Index) == False]\n",
+    "    excursion_points = excursion_points.reset_index(drop=True)\n",
+    "    \n",
+    "    fig = plt.figure(figsize=(36, 18))\n",
+    "    plt.plot(x, gvs, color='grey')\n",
+    "\n",
+    "    plt.xlabel('Indexes')\n",
+    "    plt.ylabel('Glucose Values')\n",
+    "\n",
+    "    a = []\n",
+    "    b = []\n",
+    "    for i in excursion_points.Index:\n",
+    "        a.append(x[i])\n",
+    "        b.append(gvs[i])\n",
+    "    #     plt.plot(x[i], gvs[i], \"o\", label=\"min\", color='orange')\n",
+    "\n",
+    "    plt.plot(a,b,color=\"red\")\n",
+    "\n",
+    "    plt.title('Glucose Value Excursions for '+str(subjectId)+' with std dev '+str(stdev))\n",
+    "    fig.savefig('/Users/snehgajiwala/Desktop/NCSA_genomics/Python - notebooks/TSForecasting/Data/Excursions/'+str(subjectId)+'_'+str(stdev), dpi=fig.dpi)\n",
+    "    plt.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49a2e12346784f498a9b460fef4e6b79",
+       "model_id": "f5dfbc4dfd864f9bbf5b4a43122ea7f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,94 +262,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GVP01 130.417 32.604\n",
-      "GVP03 12.791 0.023\n",
-      "1636-69-001 34.787 34.787\n",
-      "1636-69-001-2 26.434 8.811\n",
-      "1636-69-026 41.201 6.867\n",
-      "1636-69-028 43.253 8.651\n",
-      "1636-69-032 28.896 5.779\n",
-      "1636-69-035 41.758 4.176\n",
-      "1636-69-048 27.044 5.409\n",
-      "1636-69-053 36.473 6.079\n",
-      "1636-69-060 33.364 5.561\n",
-      "1636-69-064 39.032 7.806\n",
-      "1636-69-069 26.682 4.447\n",
-      "1636-69-090 41.547 8.309\n",
-      "1636-69-091 29.058 4.843\n",
-      "1636-69-100 32.267 6.453\n",
-      "1636-69-104 27.714 5.543\n",
-      "1636-69-104-2 16.721 3.344\n",
-      "1636-69-107 26.743 4.457\n",
-      "1636-69-111 31.733 6.347\n",
-      "1636-69-114 31.463 6.293\n",
-      "1636-69-123 27.986 3.998\n",
-      "1636-70-1002 28.768 5.754\n",
-      "1636-70-1003 26.81 4.468\n",
-      "1636-70-1005 42.809 7.135\n",
-      "1636-70-1008 34.32 6.864\n",
-      "1636-70-1010 34.987 8.747\n",
-      "2133-001 34.818 5.803\n",
-      "2133-002 33.142 5.524\n",
-      "2133-003 49.147 8.191\n",
-      "2133-004 56.495 11.299\n",
-      "2133-006 31.772 6.354\n",
-      "2133-007 36.273 6.045\n",
-      "2133-008 23.861 4.772\n",
-      "2133-009 27.686 5.537\n",
-      "2133-010 23.556 3.926\n",
-      "2133-011 29.483 3.685\n",
-      "2133-012 34.492 5.749\n",
-      "2133-013 29.161 4.166\n",
-      "2133-015 35.05 5.842\n",
-      "2133-017 36.02 7.204\n",
-      "2133-018 49.318 9.864\n",
-      "2133-019-2 26.853 26.853\n",
-      "2133-019 33.288 11.096\n",
-      "2133-020 34.795 6.959\n",
-      "2133-021 30.034 6.007\n",
-      "2133-022 25.669 4.278\n",
-      "2133-023 29.054 4.151\n",
-      "2133-024 24.931 4.155\n",
-      "2133-025 23.316 3.886\n",
-      "2133-026 16.827 3.365\n",
-      "2133-027 44.8 6.4\n",
-      "2133-028 30.124 5.021\n",
-      "2133-030 33.958 5.66\n",
-      "2133-032 34.903 6.981\n",
-      "2133-033 24.151 4.025\n",
-      "2133-035 27.605 4.601\n",
-      "2133-036 32.364 4.046\n",
-      "2133-037 17.837 3.567\n",
-      "2133-039 29.926 3.741\n",
-      "2133-040 29.941 4.99\n",
-      "2133-041 45.672 7.612\n",
-      "ID01 143.411 35.853\n",
-      "ID02 95.177 19.035\n",
-      "ID03 446.57 89.314\n",
-      "ID11 57.072 19.024\n",
-      "ID21 61.816 15.454\n",
-      "ID29 113.756 37.919\n",
-      "ID12 88.951 17.79\n",
-      "ID13 126.047 63.024\n",
-      "ID22 64.848 21.616\n",
-      "ID23 193.343 32.224\n",
-      "ID30 63.831 15.958\n",
-      "ID31 114.148 57.074\n",
-      "ID32 11.173 0.859\n",
-      "ID33 26.549 2.042\n",
-      "OD570 53.973 1.384\n",
-      "OD591 42.004 0.977\n",
-      "OD588 32.537 0.739\n",
-      "OD563 42.527 0.967\n",
-      "OD575 42.696 0.97\n",
-      "OD559 42.434 1.061\n",
-      "OD567 36.168 0.804\n",
-      "OD544 38.423 0.915\n",
-      "OD552 29.929 0.809\n",
-      "OD596 36.089 0.785\n",
-      "OD540 38.172 0.868\n",
-      "OD584 37.445 0.851\n",
+      "1636-69-001 31.953\n",
+      "1636-69-001-2 68.40733333333333\n",
+      "1636-69-026 83.9995\n",
+      "1636-69-028 75.3926\n",
+      "1636-69-032 27.1678\n",
+      "1636-69-035 123.1945\n",
+      "1636-69-048 44.8942\n",
+      "1636-69-053 53.23733333333333\n",
+      "1636-69-060 88.22033333333334\n",
+      "1636-69-064 94.3556\n",
+      "1636-69-069 66.85466666666667\n",
+      "1636-69-090 63.0484\n",
+      "1636-69-091 42.903333333333336\n",
+      "1636-69-100 60.3872\n",
+      "1636-69-104 58.6522\n",
+      "1636-69-104-2 74.1962\n",
+      "1636-69-107 38.777833333333334\n",
+      "1636-69-111 52.3622\n",
+      "1636-69-114 68.4486\n",
+      "1636-69-123 44.363142857142854\n",
+      "1636-70-1002 48.315\n",
+      "1636-70-1003 80.36716666666666\n",
+      "1636-70-1005 65.47685714285714\n",
+      "1636-70-1008 37.9016\n",
+      "1636-70-1010 65.91175\n",
+      "2133-001 55.12116666666667\n",
+      "2133-002 32.6415\n",
+      "2133-003 63.208666666666666\n",
+      "2133-004 90.95139999999999\n",
+      "2133-006 35.699600000000004\n",
+      "2133-007 90.06785714285714\n",
+      "2133-008 35.9872\n",
+      "2133-009 69.3228\n",
+      "2133-010 38.8215\n",
+      "2133-011 54.354\n",
+      "2133-012 57.95133333333333\n",
+      "2133-013 44.568714285714286\n",
+      "2133-015 61.125166666666665\n",
+      "2133-017 35.3906\n",
+      "2133-018 58.5546\n",
+      "2133-019 60.739666666666665\n",
+      "2133-019-2 28.17\n",
+      "2133-020 60.477000000000004\n",
+      "2133-021 112.2642\n",
+      "2133-022 50.8375\n",
+      "2133-023 40.62885714285714\n",
+      "2133-024 53.749833333333335\n",
+      "2133-025 47.955333333333336\n",
+      "2133-026 40.426\n",
+      "2133-027 53.66757142857143\n",
+      "2133-028 37.223333333333336\n",
+      "2133-030 48.53766666666667\n",
+      "2133-032 30.8862\n",
+      "2133-033 45.477000000000004\n",
+      "2133-035 73.75833333333333\n",
+      "2133-036 90.727375\n",
+      "2133-037 63.5032\n",
+      "2133-039 69.80199999999999\n",
+      "2133-040 38.648666666666664\n",
+      "2133-041 71.74471428571428\n",
+      "GVP01 161.5805\n",
+      "GVP03 137.18052320675105\n",
+      "ID01 155.15275\n",
+      "ID02 94.2316\n",
+      "ID03 206.74599999999998\n",
+      "ID11 63.677\n",
+      "ID12 84.1294\n",
+      "ID13 123.10249999999999\n",
+      "ID21 54.8455\n",
+      "ID22 66.211\n",
+      "ID23 132.36383333333333\n",
+      "ID29 108.265\n",
+      "ID30 58.4655\n",
+      "ID31 109.928\n",
+      "ID32 91.00992307692307\n",
+      "ID33 79.25653846153845\n",
+      "OD540 126.43613636363636\n",
+      "OD544 162.2997435897436\n",
+      "OD552 149.90208333333334\n",
+      "OD559 143.09945\n",
+      "OD563 104.32872727272728\n",
+      "OD567 149.48982222222222\n",
+      "OD570 147.88353846153845\n",
+      "OD575 116.02734090909091\n",
+      "OD584 187.9333409090909\n",
+      "OD588 136.22863636363635\n",
+      "OD591 138.33943902439023\n",
+      "OD596 118.4256590909091\n",
       "\n"
      ]
     }
@@ -262,19 +357,71 @@
    "source": [
     "data = pd.read_csv(\"~/Desktop/NCSA_genomics/Python - notebooks/TSForecasting/Data/consolidatedDataForPackage.csv\")\n",
     "data['Display Time'] = data['Display Time'].apply(lambda x: pd.datetime.strptime(x, '%Y-%m-%d %H:%M:%S'))\n",
-    "for subjectId in tqdm(data['subjectId'].unique()):\n",
-    "    df = pd.DataFrame()\n",
-    "    df = data[data['subjectId']==subjectId]\n",
-    "    df = df.reset_index(drop=True)\n",
-    "    #smoothening the data\n",
+    "\n",
+    "for subjectId, df in tqdm(data.groupby('subjectId')):\n",
+    "    \n",
+    "    df = fullDay(df)\n",
+    "    length = df['Display Time'].iloc[-1]-df['Display Time'].iloc[0]\n",
+    "    length = length.round(\"d\")\n",
+    "    days = length.days\n",
+    "\n",
     "    df['GlucoseValue'] = smoothing(df['GlucoseValue'])\n",
     "    df = df[df['GlucoseValue'].notna()]\n",
     "    df = df.reset_index(drop=True)\n",
+    "\n",
+    "    dates = []\n",
+    "    for i in range(len(df.index)):\n",
+    "        dates.append(df['Display Time'][i].date())\n",
+    "    df['Date'] = dates\n",
+    "\n",
+    "    mage_daily = []\n",
+    "    for Date, xx in df.groupby('Date'):\n",
+    "        xx = xx.reset_index(drop=True)\n",
+    "        mage_daily.append(mageCalculation(xx,1))\n",
+    "    print(subjectId, round(mean(mage_daily)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61295c80502d45e5a74a2dd837e927bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=88), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for subjectId, df in tqdm(data.groupby('subjectId')):\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    x,y = mageCalculation(df,1)\n",
-    "    print(subjectId,x,y )"
+    "    df = fullDay(df)\n",
+    "    length = df['Display Time'].iloc[-1]-df['Display Time'].iloc[0]\n",
+    "    length = length.round(\"d\")\n",
+    "    days = length.days\n",
+    "\n",
+    "    df['GlucoseValue'] = smoothing(df['GlucoseValue'])\n",
+    "    df = df[df['GlucoseValue'].notna()]\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    saveExcusrions(subjectId, df, std=1)\n",
+    "    "
    ]
   },
   {
