--- a/Python - notebooks/GVIs.ipynb
+++ b/Python - notebooks/GVIs.ipynb
@@ -314,7 +314,7 @@
     }
    ],
    "source": [
-    "bgri(xx, units = 'mg')"
+    "glucoCheckObject.bgri(x,'mg')"
    ]
   },
   {
@@ -655,7 +655,7 @@
     }
    ],
    "source": [
-    "m_value(xx, units = 'mg', ref_value = 120)"
+    "glucoCheckObject.m_value(xx, units = 'mg', ref_value = 120)"
    ]
   },
   {
@@ -1102,7 +1102,7 @@
     }
    ],
    "source": [
-    "lage(xx)"
+    "glucoCheckObject.lage(x)"
    ]
   },
   {
